# oreilly-llmops-with-databricks

./: .gitignore  arxiv_agent.py  databricks.yml  project_config.yml  pyproject.toml
analytics/: analyze_chunk_lengths.py  doc.json
notebooks/: agent.py  arxiv_agent.py  arxiv_curator-0.1.0-py3-none-any.whl  arxiv_curator-0.1.1-py3-none-any.whl  chapter6_1.process_arxiv_papers.py  chapter6_2.vector_sarch.py  chapter6_3.simple_agent.py  chapter6_4.more_complex_agent.py  chapter6_5.log_register_deploy_agent.py  chapter7_0.test_responses.py  chapter7_1.arxiv_process_docs.py  chapter7_1.process_arxiv_papers.py  chapter7_2.vector_sarch.py  chapter7_3.genie.py  chapter7_4.log_register_deploy_agent.py  chapter7_4.mcp.py  chapter7_4.mlflow_tracing.py  chapter7_5.agent_evaluation.py  chapter7_5.test_agent.py  chapter7_6.log_register_agent.py  chapter7_6.log_register_deploy_agent.py  chapter7_7.evaluate_agent.py  chapter7_7.evaluate_log_register_agent.py  chapter7_8.deploy_agent.py  chapter7_8.log_register_deploy_agent.py  chapter7_9.call_agent.py  chapter7_9.deploy_agent copy.py
resources/: process_data.yml  register_deploy_agent.yml
resources/deployment_notebooks/: deploy_agent.py  log_register_agent.py  process_data.py
scripts/: agent.py  approve.py  deploy_agent.py  log_register_agent.py  process_data.py
src/arxiv_curator/: agent.py  config.py  data_processor.py  evaluation.py  mcp.py  serving.py  vector_search.py
